--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
         "linux": {
             "target": "rpm",
             "depends": []
+        },
+        "win": {
+            "msi": false
         }
     },
     "devDependencies": {
