--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "rimraf": "^2.5.2",
     "tsconfig-glob": "^0.4.3",
     "typescript": "^1.8.10"
+  },
+  "dependencies": {
+    "electron-sudo": "^3.0.5"
   }
 }
