--- a/app/package.json
+++ b/app/package.json
@@ -15,5 +15,8 @@
     "bugs": {
         "url": "https://github.com/KaiserY/learn-electron/issues"
     },
-    "homepage": "https://github.com/KaiserY/learn-electron#readme"
+    "homepage": "https://github.com/KaiserY/learn-electron#readme",
+    "dependencies": {
+      "electron-sudo": "^3.0.5"
+    }
 }
