--- a/package.json
+++ b/package.json
@@ -1,34 +1,46 @@
 {
-    "scripts": {
-        "start": "npm run compile && electron ./app",
-        "postinstall": "install-app-deps",
-        "clean:dist": "rimraf dist",
-        "clean:out": "rimraf app/public/out",
-        "compile": "npm run clean:out && tsconfig -i 2 && tsc",
-        "pack": "npm run compile && build",
-        "dist": "npm run compile && build"
+  "scripts": {
+    "start": "npm run compile && electron ./app",
+    "postinstall": "install-app-deps",
+    "clean:dist": "rimraf dist",
+    "clean:public": "rimraf app/public",
+    "compile": "npm run clean:public && tsconfig -i 2 && tsc && webpack",
+    "pack": "npm run compile && build",
+    "dist": "npm run compile && build"
+  },
+  "build": {
+    "prune": true,
+    "download": {
+      "mirror": "https://npm.taobao.org/mirrors/electron/",
+      "strictSSL": false
     },
-    "build": {
-        "prune": true,
-        "download": {
-            "mirror": "https://npm.taobao.org/mirrors/electron/",
-            "strictSSL": false
-        },
-        "linux": {
-            "target": "rpm",
-            "depends": []
-        },
-        "win": {
-            "msi": false
-        }
+    "linux": {
+      "target": "rpm",
+      "depends": []
     },
-    "devDependencies": {
-        "cpr": "^1.1.1",
-        "devtron": "^1.1.2",
-        "electron-builder": "^3.26.2",
-        "electron-prebuilt": "^1.1.3",
-        "rimraf": "^2.5.2",
-        "tsconfig-glob": "^0.4.3",
-        "typescript": "^1.8.10"
+    "win": {
+      "msi": false
     }
+  },
+  "dependencies": {
+    "electron-sudo": "^3.0.5",
+    "jquery": "^2.2.4",
+    "material-design-icons": "^2.2.3",
+    "material-design-lite": "^1.1.3"
+  },
+  "devDependencies": {
+    "cpr": "^1.1.1",
+    "css-loader": "^0.23.1",
+    "devtron": "^1.1.2",
+    "electron-builder": "^3.26.2",
+    "electron-prebuilt": "^1.1.3",
+    "file-loader": "^0.8.5",
+    "html-webpack-plugin": "^2.17.0",
+    "rimraf": "^2.5.2",
+    "style-loader": "^0.13.1",
+    "tsconfig-glob": "^0.4.3",
+    "typescript": "^1.8.10",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1"
+  }
 }
