--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "material-design-lite": "^1.1.3"
   },
   "devDependencies": {
+    "awesome-typescript-loader": "^0.17.0",
     "cpr": "^1.1.1",
     "css-loader": "^0.23.1",
     "devtron": "^1.1.2",
