--- a/app/package.json
+++ b/app/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "learn-electron",
-  "version": "1.0.1",
-  "description": "A minimal Electron application",
-  "main": "public/main.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/KaiserY/learn-electron.git"
-  },
-  "keywords": [
-    "Electron"
-  ],
-  "author": "KaiserY <yueyang.fanqiang@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/KaiserY/learn-electron/issues"
-  },
-  "homepage": "https://github.com/KaiserY/learn-electron#readme"
+    "name": "learn-electron",
+    "version": "1.0.1",
+    "description": "A minimal Electron application",
+    "main": "public/main.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/KaiserY/learn-electron.git"
+    },
+    "keywords": [
+        "Electron"
+    ],
+    "author": "KaiserY <yueyang.fanqiang@gmail.com>",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/KaiserY/learn-electron/issues"
+    },
+    "homepage": "https://github.com/KaiserY/learn-electron#readme",
+    "dependencies": {
+        "electron-sudo": "^3.0.5"
+    }
 }
