--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,11 +33,11 @@
     "rewriteTsconfig": true
   },
   "files": [
-    "src/entry.ts",
-    "src/main.ts",
-    "src/renderer.ts",
     "typings/globals/github-electron/index.d.ts",
     "typings/globals/node/index.d.ts",
-    "typings/index.d.ts"
+    "typings/index.d.ts",
+    "src/entry.ts",
+    "src/main.ts",
+    "src/renderer.ts"
   ]
 }
