--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
     "postinstall": "install-app-deps",
     "clean:dist": "rimraf dist",
     "clean:public": "rimraf app/public",
-    "compile": "npm run clean:public && tsconfig -i 2 && tsc && webpack --progress --display-reasons --display-error-details --display-modules",
+    "clean:out": "rimraf app/out",
+    "compile:ts" : "npm run clean:out && tsc",
+    "compile:webpack" : "npm run clean:public && webpack --progress --profile --colors --display-reasons --display-error-details --display-modules",
+    "compile": "npm run compile:webpack && npm run compile:ts",
     "pack": "npm run compile && build",
     "dist": "npm run compile && build"
   },
   "build": {
-      "asar-unpack-dir": "node_modules/electron-sudo/**/*",
+    "asar-unpack-dir": "node_modules/electron-sudo/**/*",
     "prune": true,
     "download": {
       "mirror": "https://npm.taobao.org/mirrors/electron/",
@@ -35,12 +38,11 @@
     "css-loader": "^0.23.1",
     "devtron": "^1.1.2",
     "electron-builder": "^3.26.2",
-    "electron-prebuilt": "^1.1.3",
+    "electron-prebuilt": "^1.2.0",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.17.0",
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.1",
-    "tsconfig-glob": "^0.4.3",
     "typescript": "^1.8.10",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
