--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "clean:dist": "rimraf dist",
     "clean:public": "rimraf app/public",
     "clean:out": "rimraf app/out",
-    "compile:ts" : "npm run clean:out && tsc",
-    "compile:webpack" : "npm run clean:public && webpack --progress --profile --colors --display-reasons --display-error-details --display-modules",
+    "compile:ts": "npm run clean:out && tsc",
+    "compile:webpack": "npm run clean:public && webpack --progress --profile --colors --display-reasons --display-error-details --display-modules",
     "compile": "npm run compile:webpack && npm run compile:ts",
     "pack": "npm run compile && build",
     "dist": "npm run compile && build"
@@ -27,6 +27,7 @@
     }
   },
   "dependencies": {
+    "codemirror": "^5.15.2",
     "electron-sudo": "^3.0.5",
     "jquery": "^2.2.4",
     "material-design-icons": "^2.2.3",
@@ -40,7 +41,7 @@
     "electron-builder": "^3.26.2",
     "electron-prebuilt": "^1.2.0",
     "file-loader": "^0.8.5",
-    "html-webpack-plugin": "^2.17.0",
+    "html-webpack-plugin": "^2.18.0",
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.1",
     "typescript": "^1.8.10",
