--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,11 +36,12 @@
     "rewriteTsconfig": false
   },
   "files": [
-    "typings/globals/github-electron/index.d.ts",
-    "typings/globals/node/index.d.ts",
-    "typings/index.d.ts",
     "src/entry.ts",
     "src/main.ts",
-    "src/renderer.ts"
+    "src/renderer.ts",
+    "typings/globals/codemirror/index.d.ts",
+    "typings/globals/github-electron/index.d.ts",
+    "typings/globals/node/index.d.ts",
+    "typings/index.d.ts"
   ]
 }
