--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,12 +18,9 @@
     "newLine": "LF",
     "sourceMap": true
   },
-  "awesomeTypescriptLoaderOptions": {
-    "resolveGlobs": false
-  },
   "filesGlob": [
     "src/*.ts",
-    "typings/**/*.d.ts"
+    "typings/index.d.ts"
   ],
   "exclude": [
     "node_modules",
@@ -33,15 +30,12 @@
   "compileOnSave": false,
   "buildOnSave": false,
   "atom": {
-    "rewriteTsconfig": false
+    "rewriteTsconfig": true
   },
   "files": [
     "src/entry.ts",
     "src/main.ts",
     "src/renderer.ts",
-    "typings/globals/codemirror/index.d.ts",
-    "typings/globals/github-electron/index.d.ts",
-    "typings/globals/node/index.d.ts",
     "typings/index.d.ts"
   ]
 }
