--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,7 @@
     "name": "learn-electron",
     "version": "1.0.3",
     "description": "A minimal Electron application",
-    "main": "out/main.js",
+    "main": "public/main.js",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/KaiserY/learn-electron.git"
