--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean:out": "rimraf app/out",
     "compile:ts": "npm run clean:out && tsc",
     "compile:webpack": "npm run clean:public && webpack --progress --profile --colors --display-reasons --display-error-details --display-modules",
-    "compile": "npm run compile:webpack && npm run compile:ts",
+    "compile": "npm run compile:webpack",
     "pack": "npm run compile && build",
     "dist": "npm run compile && build"
   },
@@ -33,10 +33,11 @@
   },
   "devDependencies": {
     "awesome-typescript-loader": "^1.0.0",
+    "copy-webpack-plugin": "^3.0.1",
     "cpr": "^1.1.2",
     "css-loader": "^0.23.1",
     "devtron": "^1.2.0",
-    "electron-builder": "^5.3.0",
+    "electron-builder": "^5.4.1",
     "electron-prebuilt": "^1.2.2",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.21.0",
