--- a/package.json
+++ b/package.json
@@ -35,12 +35,10 @@
     "@angular/router": "3.0.0-alpha.8",
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@angular/upgrade": "2.0.0-rc.3",
-
     "core-js": "^2.4.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.9",
     "zone.js": "^0.6.12",
-
     "codemirror": "^5.16.0",
     "electron-sudo": "^3.0.6",
     "jquery": "^3.0.0",
@@ -48,6 +46,7 @@
     "material-design-lite": "^1.1.3"
   },
   "devDependencies": {
+    "angular2-template-loader": "^0.4.0",
     "awesome-typescript-loader": "^1.1.1",
     "copy-webpack-plugin": "^3.0.1",
     "cpr": "^1.1.2",
@@ -57,8 +56,10 @@
     "electron-prebuilt": "^1.2.5",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.21.0",
+    "raw-loader": "^0.5.1",
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.1",
+    "to-string-loader": "^1.1.4",
     "typescript": "^1.8.10",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
