--- a/package.json
+++ b/package.json
@@ -25,22 +25,22 @@
     }
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.3",
-    "@angular/compiler": "2.0.0-rc.3",
-    "@angular/core": "2.0.0-rc.3",
-    "@angular/forms": "0.1.1",
-    "@angular/http": "2.0.0-rc.3",
-    "@angular/platform-browser": "2.0.0-rc.3",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.3",
-    "@angular/router": "3.0.0-alpha.8",
+    "@angular/common": "2.0.0-rc.4",
+    "@angular/compiler": "2.0.0-rc.4",
+    "@angular/core": "2.0.0-rc.4",
+    "@angular/forms": "0.2.0",
+    "@angular/http": "2.0.0-rc.4",
+    "@angular/platform-browser": "2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
+    "@angular/router": "3.0.0-beta.2",
     "@angular/router-deprecated": "2.0.0-rc.2",
-    "@angular/upgrade": "2.0.0-rc.3",
+    "@angular/upgrade": "2.0.0-rc.4",
     "core-js": "^2.4.0",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.9",
+    "rxjs": "5.0.0-beta.10",
     "zone.js": "^0.6.12",
     "codemirror": "^5.16.0",
-    "electron-sudo": "^3.0.7",
+    "electron-sudo": "^3.0.9",
     "jquery": "^3.0.0",
     "material-design-icons": "^2.2.3",
     "material-design-lite": "^1.1.3"
@@ -52,12 +52,12 @@
     "cpr": "^1.1.2",
     "css-loader": "^0.23.1",
     "devtron": "^1.2.1",
-    "electron-builder": "^5.10.1",
-    "electron-prebuilt": "^1.2.5",
+    "electron-builder": "^5.10.5",
+    "electron-prebuilt": "^1.2.6",
     "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.21.0",
+    "html-webpack-plugin": "^2.22.0",
     "raw-loader": "^0.5.1",
-    "rimraf": "^2.5.2",
+    "rimraf": "^2.5.3",
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.4",
     "typescript": "^1.8.10",
